Moved dialogs into a dialog view, and used that to resolve some z-index issues. Should be able to move other stuff in there in the future to resolve #11 (and the issue I had with pull req #12)

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -89,7 +89,7 @@ body {
 	height: 40px;
 	width: 200px;
 
-	div {
+	& > div {
 		float: right;
 	}
 }
